--- a/src/Mercurius.LAN.Web/Components/Shared/SponsorScroller.razor.css
+++ b/src/Mercurius.LAN.Web/Components/Shared/SponsorScroller.razor.css
@@ -15,7 +15,7 @@
 
 .slide {
     display: flex;
-    animation: slide 30s linear infinite;
+    animation: slide 50s linear infinite;
 
 }
 
